@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
-<!-- generated by wxGlade 0.3.2 on Sun Jun 06 18:58:04 2004 -->
+<!-- generated by wxGlade 0.3.1 on Sun Aug 29 00:42:04 2004 -->
 
-<application path="../../resources/dialogs/misccontrols.xrc" name="" class="" option="0" language="XRC" top_window="" encoding="ISO-8859-1" use_gettext="0" overwrite="0" use_new_namespace="0">
+<application path="../../resources/dialogs/misccontrols.xrc" name="" class="" option="0" language="XRC" top_window="" encoding="ISO-8859-1" use_gettext="0" overwrite="0">
     <object class="wxPanel" name="MiscControlPage" base="EditTopLevelPanel">
         <style>wxTAB_TRAVERSAL</style>
         <object class="wxBoxSizer" name="ControlsPageSizer" base="EditBoxSizer">
@@ -46,9 +46,9 @@
                                         <flag>wxALIGN_CENTER_VERTICAL</flag>
                                         <border>0</border>
                                         <option>0</option>
-                                        <object class="wxStaticText" name="MinFrameSkipLabel" base="EditStaticText">
+                                        <object class="wxStaticText" name="MaxFrameSkipLabel" base="EditStaticText">
                                             <attribute>1</attribute>
-                                            <label>Min Frameskip:</label>
+                                            <label>Frameskip</label>
                                         </object>
                                     </object>
                                 </object>
@@ -100,7 +100,7 @@
                                         <border>5</border>
                                         <option>0</option>
                                         <object class="wxButton" name="NormalSpeedButton" base="EditButton">
-                                            <label>100 %</label>
+                                            <label>100%</label>
                                         </object>
                                     </object>
                                     <object class="sizeritem">
@@ -117,6 +117,7 @@
                                         <option>0</option>
                                         <object class="wxTextCtrl" name="SpeedIndicator" base="EditTextCtrl">
                                             <tooltip>Percentage of normal MSX speed</tooltip>
+                                            <size>40, 26</size>
                                         </object>
                                     </object>
                                 </object>
@@ -128,23 +129,12 @@
                                 <object class="wxBoxSizer" name="FrameSkipSizer" base="EditBoxSizer">
                                     <orient>wxHORIZONTAL</orient>
                                     <object class="sizeritem">
-                                        <flag>wxALL|wxALIGN_CENTER_VERTICAL</flag>
-                                        <border>5</border>
-                                        <option>1</option>
-                                        <object class="wxSlider" name="MinFrameSkipSlider" base="EditSlider">
-                                            <style>wxSL_HORIZONTAL|wxSL_AUTOTICKS</style>
-                                            <tooltip>Maximum number of frames that may be skipped</tooltip>
-                                            <range>0, 100</range>
-                                            <value>0</value>
-                                        </object>
-                                    </object>
-                                    <object class="sizeritem">
                                         <flag>wxTOP|wxBOTTOM|wxALIGN_CENTER_VERTICAL</flag>
                                         <border>10</border>
                                         <option>0</option>
                                         <object class="wxStaticText" name="MaxFrameSkipLabel" base="EditStaticText">
                                             <attribute>1</attribute>
-                                            <label>Max Frameskip:</label>
+                                            <label>Max:</label>
                                         </object>
                                     </object>
                                     <object class="sizeritem">
@@ -162,17 +152,58 @@
                                         <flag>wxALL|wxALIGN_CENTER_VERTICAL</flag>
                                         <border>5</border>
                                         <option>0</option>
-                                        <object class="wxButton" name="ZeroFrameSkipButton" base="EditButton">
-                                            <tooltip>No frameskip</tooltip>
-                                            <label>Default</label>
+                                        <object class="wxButton" name="DefaultMaxFrameSkipButton" base="EditButton">
+                                            <tooltip>Set to default</tooltip>
+                                            <label>Def.</label>
+                                            <size>40, 26</size>
                                         </object>
                                     </object>
                                     <object class="sizeritem">
                                         <flag>wxALL|wxALIGN_CENTER_VERTICAL</flag>
                                         <border>5</border>
                                         <option>0</option>
-                                        <object class="wxTextCtrl" name="FrameSkipIndicator" base="EditTextCtrl">
+                                        <object class="wxTextCtrl" name="MaxFrameSkipIndicator" base="EditTextCtrl">
                                             <tooltip>Maximum number of frames that may be skipped</tooltip>
+                                            <size>40, 26</size>
+                                        </object>
+                                    </object>
+                                    <object class="sizeritem">
+                                        <flag>wxTOP|wxBOTTOM|wxALIGN_CENTER_VERTICAL</flag>
+                                        <border>10</border>
+                                        <option>0</option>
+                                        <object class="wxStaticText" name="MinFrameSkipLabel" base="EditStaticText">
+                                            <attribute>1</attribute>
+                                            <label>Min:</label>
+                                        </object>
+                                    </object>
+                                    <object class="sizeritem">
+                                        <flag>wxALL|wxALIGN_CENTER_VERTICAL</flag>
+                                        <border>5</border>
+                                        <option>1</option>
+                                        <object class="wxSlider" name="MinFrameSkipSlider" base="EditSlider">
+                                            <style>wxSL_HORIZONTAL|wxSL_AUTOTICKS</style>
+                                            <tooltip>Minimum number of frames to skip</tooltip>
+                                            <range>0, 100</range>
+                                            <value>0</value>
+                                        </object>
+                                    </object>
+                                    <object class="sizeritem">
+                                        <flag>wxALL|wxALIGN_CENTER_VERTICAL</flag>
+                                        <border>5</border>
+                                        <option>0</option>
+                                        <object class="wxButton" name="DefaultMinFrameSkipButton" base="EditButton">
+                                            <tooltip>Set to default</tooltip>
+                                            <label>Def.</label>
+                                            <size>40, 26</size>
+                                        </object>
+                                    </object>
+                                    <object class="sizeritem">
+                                        <flag>wxALL|wxALIGN_CENTER_VERTICAL</flag>
+                                        <border>5</border>
+                                        <option>0</option>
+                                        <object class="wxTextCtrl" name="MinFrameSkipIndicator" base="EditTextCtrl">
+                                            <tooltip>Minimum number of frames to skip</tooltip>
+                                            <size>40, 26</size>
                                         </object>
                                     </object>
                                 </object>
