@@ -1,4 +1,4 @@
-// $Id: MiscControlPage.h,v 1.15 2004/05/09 14:25:51 manuelbi Exp $
+// $Id: MiscControlPage.h,v 1.16 2004/06/06 18:25:42 h_oudejans Exp $
 // MiscControlPage.h: interface for the MiscControlPage class.
 //
 //////////////////////////////////////////////////////////////////////
@@ -28,19 +28,22 @@ class MiscControlPage : public CatapultPage
 		void OnSetNormalSpeed (wxCommandEvent & event);
 		void OnSetMaxSpeed (wxCommandEvent & event);
 		void OnSpeedChange (wxScrollEvent & event);
-		void OnSetAutoFrameSkip (wxCommandEvent & event);
-		void OnSetZeroFrameSkip (wxCommandEvent & event);
-		void OnFrameSkipChange (wxScrollEvent & event);
+		void OnSetDefaultMinFrameSkip (wxCommandEvent & event);
+		void OnSetDefaultMaxFrameSkip (wxCommandEvent & event);
+		void OnMinFrameSkipChange (wxScrollEvent & event);
+		void OnMaxFrameSkipChange (wxScrollEvent & event);
 		void OnFirmware (wxCommandEvent & event);
 		void OnPower (wxCommandEvent &event);
 		void OnPause (wxCommandEvent &event);
 		void OnReset (wxCommandEvent &event);
-		void OnInputFrameskip (wxCommandEvent & event);
+		void OnInputMinFrameskip (wxCommandEvent & event);
+		void OnInputMaxFrameskip (wxCommandEvent & event);
 		void OnChangeJoystick (wxCommandEvent & event);
 		void OnJoystickChanged ();
 		void OnInputSpeed (wxCommandEvent & event);
 		void SetSpeed (wxString value);
-		void SetFrameskip (wxString value);
+		void SetMinFrameskip (wxString value);
+		void SetMaxFrameskip (wxString value);
 		void SetThrottle (wxString value);
 		void SetCmdTiming (wxString value);		
 		void HandleFocusChange(wxWindow * oldFocus, wxWindow * newFocus) {};
@@ -54,7 +57,8 @@ class MiscControlPage : public CatapultPage
 		wxButton * m_resetButton;
 		wxButton * m_speedNormalButton;
 		wxButton * m_speedMaxButton;
-		wxButton * m_frameSkipZeroButton;
+		wxButton * m_defaultMinFrameSkipButton;
+		wxButton * m_defaultMaxFrameSkipButton;
 
 		wxToggleButton * m_pauseButton;
 		wxToggleButton * m_firmwareButton;
@@ -64,7 +68,8 @@ class MiscControlPage : public CatapultPage
 		wxSlider * m_maxFrameSkipSlider;
 		wxSlider * m_minFrameSkipSlider;
 		wxTextCtrl * m_speedIndicator;
-		wxTextCtrl * m_frameSkipIndicator;
+		wxTextCtrl * m_minFrameSkipIndicator;
+		wxTextCtrl * m_maxFrameSkipIndicator;
 		wxString m_oldJoy1;
 		wxString m_oldJoy2;
 		wxComboBox * m_lastUpdatedCombo;
